# chattr

./: .deepsource.toml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .mega-linter.yml  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  compose-dev.yaml  compose.yaml  devenv.nix  devenv.yaml  docker-bake.hcl  docker-compose-dev.yaml  docker-compose.yaml  mcp.json  mega-linter.yml  mise.toml  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  setup.sh
.github/: dependabot.yaml  megalinter.yaml  mergify.yml  renovate.json
.github/lint/: .ls-lint.yaml  .markdownlint.yaml  .ruff.toml  .taplo.toml  .trivy.yaml  .yamlfix.toml
.github/workflows/: .docker.yaml  .lint.yaml  agentics-maintenance.yml  agents-md-maintenance.lock.yml  agents-md-maintenance.md  build.yaml  ci-coach.lock.yml  ci-coach.md  ci-doctor.lock.yml  ci-doctor.md  ci.yaml  ci_tools.yaml  code-simplifier.lock.yml  code-simplifier.md  code_analysis.yaml  code_quality.yaml  daily-malicious-code-scan.lock.yml  daily-malicious-code-scan.md  docker.yaml  ghcr_cleaner.yaml  github.yaml  hf.yml  huggingface.yaml  pylint.yaml  pypi.yaml  release.yaml  reusable_docker.yaml  ruff.yaml  spelling.yaml  test.yaml  trunk.yaml  trunk_cache.yaml  trunk_upgrade.yaml  version.yaml
.github/workflows/reusable/: docker.yaml
.sonarlint/: connectedMode.json
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml  .yamlfmt.yaml  ruff.toml
.zed/: tasks.json
assets/: mcp-config.json
assets/prompts/: template.poml
chatacter/: crawler.py
chatacter/agents/: llm.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  QUICKSTART.md  TROUBLESHOOTING.md  api.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  troubleshooting.md
src/App/: __init__.py  main.py
src/App/agents/: crawler.py  llm.py  search.py
src/App/chatacter/: vector_database.py
src/App/db/: vector_database.py
src/chattr/: __init__.py  __main__.py  graph.py  gui.py  settings.py  tools.py  utils.py
src/chattr/agent/: __init__.py  agent.py  database.py  description.py  instructions.py  knowledge.py  model.py  prompt.py  tools.py  vector_database.py
src/chattr/agents/: crawler.py  llm.py  search.py
src/chattr/app/: __init__.py  app.py  builder.py  exceptions.py  gui.py  logger.py  runner.py  (+3 more)
tests/: test_app.py  test_gradio.py
(+3 files in other folders)
