[project]
authors = [
  { email = "mohamed.hisham.abdelzaher@gmail.com", name = "Mohamed Hisham Abdelzaher" },
]
dependencies = [
  "agno[google,qdrant,os,mcp,openai]>=2.5.13",
  "ddgs>=9.11.2",
  "fastembed>=0.7.4",
  "rich>=14.3.3",
]
description = "App part of the Chatacter Backend"
name = "chattr"
readme = "README.md"
requires-python = ">=3.14,<3.15"
scripts = { chattr = "chattr.__main__:main" }
version = "0.0.157"

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[dependency-groups]
dev = [
  "doppler-env>=0.3.1",
  "pre-commit>=4.5.1",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pytest-mergify>=2026.1.26.1",
  "ruff>=0.15.8",
  "ty>=0.0.27",
  "uv-build>=0.11.3",
]
