[project]
authors = [
  { email = "mohamed.hisham.abdelzaher@gmail.com", name = "Mohamed Hisham Abdelzaher" },
]
dependencies = [
  "agno[google,qdrant]>=2.6.2",
  "ddgs>=9.14.1",
  "fastembed>=0.8.0",
  "gradio[mcp]>=6.13.0",
  "m3u8>=6.0.0",
  "mem0ai>=2.0.1",
  "poml>=0.0.8",
  "rich>=15.0.0",
]
description = "App part of the Chatacter Backend"
name = "chattr"
readme = "README.md"
requires-python = ">=3.14.4,<3.15"
version = "0.0.157"

[project.scripts]
chattr = "chattr.__main__:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[dependency-groups]
dev = [
  "doppler-env>=0.3.1",
  "pre-commit>=4.6.0",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pytest-mergify>=2026.4.7.1",
  "ruff>=0.15.12",
  "ty>=0.0.32",
  "uv-build>=0.11.8",
]

[tool.ruff]
extend = ".github/lint/.ruff.toml"
