[project]
authors = [
  { email = "mohamed.hisham.abdelzaher@gmail.com", name = "Mohamed Hisham Abdelzaher" },
]
dependencies = [
  "agno[google,qdrant]>=2.6.11",
  "ddgs>=9.14.4",
  "fastembed>=0.8.0",
  "gradio[mcp]>=6.15.2",
  "m3u8>=6.0.0",
  "mem0ai>=2.0.3",
  "poml>=0.0.8",
  "rich>=15.0.0",
]
description = "App part of the Chatacter Backend"
name = "chattr"
readme = "README.md"
requires-python = ">=3.14.5,<3.15"
version = "0.0.157"

[project.scripts]
chattr = "chattr.__main__:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[dependency-groups]
dev = [
  "doppler-env>=0.3.1",
  "pre-commit>=4.6.0",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pytest-mergify>=2026.5.27.1",
  "ruff>=0.15.15",
  "ty>=0.0.36",
  "uv-build>=0.11.18",
]

[tool.ruff]
extend = ".github/lint/.ruff.toml"
